[package]
name = "spl_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = "1.0.209"
serde_json = "1.0.128"
# solana-client = "1.18.23"
# solana-program = "1.18.23"
# solana-sdk = "1.18.23"
# spl-token-2022 = "5.0.2"
thiserror = "1.0.63"
# spl-associated-token-account = "5.0.1"
mpl-token-metadata = "4.1.2"
solana-program = "=1.18.23"
solana-sdk = "=1.18.23"
solana-client = "=1.18.23"
spl-token-2022 = "=3.0.4"
spl-associated-token-account = "=3.0.4"
anchor-client = "0.29.0"
spl-memo = "4.0.0"

raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", branch = "master" }
bitcoin = "0.32.3"
hex = "0.4.3"
bip39 = "2.1.0"
derive_builder = "0.20.2"
